<resources>
    <string name="app_name">رعاية بلا حدود</string>
    <string name="medical_app">الرعاية التلطيفية</string>
    <string name="welcome_back">أهلا بك !</string>
    <string name="sign_up">انشاء حساب</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_with_social_media">سجل بواسطة السوشيال ميديا</string>
    <string name="hello_sign_in">تسجيل الدخول</string>
    <string name="forget_pass">نسيت كلمة المرور ؟</string>
    <string name="dont_have_account">ليس لدي حساب ؟</string>
    <string name="enter_password">أدخل كلمة المرور</string>
    <string name="enter_email">أدخل الايميل</string>
    <string name="enter_name">أدخل الاسم ثلاثي</string>
    <string name="enter_birthdate">أدخل تاريخ ميلادك</string>
    <string name="enter_mobile">أدخل رقم الجوال</string>
    <string name="enter_address">أدخل العنوان</string>
    <string name="enter_confirm_password">أدخل تاكيد كلمة المرور</string>
    <string name="profile">الملف الشخصي</string>
    <string name="home">الرئيسية</string>
    <string name="doctors">الأطباء</string>
    <string name="find_doctor">ابحث عن طبيب</string>
    <string name="chat">الدردشات</string>
    <string name="others">أخرى </string>
    <string name="settings">الإعدادات</string>
    <string name="logout">تسجيل خروج</string>
    <string name="about">حول التطبيق</string>
    <string name="username">اسم المستخدم</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="skip">تخطي</string>

    <string name="hello">مرحبا! 👋</string>
    <string name="service">الخدمات</string>
    <string name="good_service">احصل على افضل خدمات طبية</string>
    <string name="coming_appointment">المواعيد القادمة</string>
    <string name="appointment">المواعيد</string>
    <string name="logoutC">هل انت متاكد من تسجيل الخروج</string>
    <string name="cancel">الغاء</string>
    <string name="logout_btn">تسجيل الخروج</string>
    <string name="yes">نعم</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="default_notification_channel_id">myFirebaseChannel</string>




</resources>